feat: 收敛核心阅读社区与推荐链路